# michaels-screensaver

./: .gitignore  .gitmodules  Cargo.toml  README.md  index.css  index.html  serve.py
src/: configurator.rs  instance.rs  lib.rs  main.rs  model.rs  particle.rs  resource.rs  screensaver.rs  shaders.rs  texture.rs  util.rs
src/resources/: default_config.toml
src/resources/shaders/: model_shader.wgsl  particle_shader.wgsl  tutorial_shader.wgsl
src/util/: color.rs  mesh.rs  model.rs  pos.rs  render.rs
