[package]
name = "michaels-screensaver"
version = "0.1.0"
authors = ["MHanak1 <michalhanak@duck.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
winit = { version =  "0.29.15", features = ["rwh_05"] }
wgpu = { path = "lib/wgpu/wgpu", features = ["webgl"]}
bytemuck = { version = "1.20.0", features = ["derive"]}
pollster = "0.4.0"
log = "0.4.22"
env_logger = "0.11.5"
cfg-if = "1.0.0"
anyhow = "1.0"
cgmath = "0.18"
getrandom = { version =  "0.2.15", features = ["js"] }
rand = "0.8.5"
web-time = "1.1.0"
config = "0.15.4"
dirs = "5.0.1"
downcast-rs = "2.0.1"
prisma = "0.1.1"
angular-units = "0.2.4"
egui = "0.30.0"
toml_edit = "0.22.22"
toml = "0.8.19"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
eframe = { version =  "0.30.0"}
wasm-bindgen = "0.2.63"
wasm-bindgen-futures = "0.4.49"
web-time = "1.1.0"
web-sys = { version = "0.3.76", features = [
    "Document",
    "Window",
    "Element",
    "UrlSearchParams",
    "Location",
]}

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
eframe = { version =  "0.30.0", features = ["wgpu"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
#opt-level = "s"
